--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,12 +1,20 @@
 header {
+  font-family: "Roboto";
   width: 100%;
   padding: 20px;
-  font-size: 36px;
+  font-size: 2.3rem;
   box-sizing: border-box;
   border-bottom: 1px solid black;
   backdrop-filter: blur(30px);
   height: 8vh;
+  a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-left: 5rem;
+  }
 }
 .headerLogo {
   width: fit-content;
+  display: flex;
 }
