--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,9 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Gothic+A1&family=Roboto&display=swap");
-
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+@font-face {
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 @import "./reset.css";
 
 body {
-  font-family: "Roboto", sans-serif;
   color: black;
   width: 100%;
   height: 100vh;
