--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,4 +1,7 @@
+@import url("../app.css");
+
 .main {
+  font-family: "GmarketSansMedium";
   width: 100%;
   height: 92vh;
   display: grid;
@@ -15,14 +18,51 @@
   display: grid;
   grid-auto-rows: 70px;
   row-gap: 3px;
+
   .character {
     margin-top: 8px;
-    font-family: "Do Hyeon", sans-serif;
+    font-family: "GmarketSansMedium";
     justify-self: center;
     display: flex;
     align-items: center;
     border: 1px solid black;
     border-radius: 15px;
     width: 90%;
+    background-color: white;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
+  }
+}
+.job_link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+}
+.home {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.time h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin-top: 20%;
+}
+.link {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30%;
+  font-size: 1.2rem;
+  .page_link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 33%;
+    a {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
