--- a/src/styles/main/TaskList.css
+++ b/src/styles/main/TaskList.css
@@ -32,16 +32,21 @@
   display: flex;
   flex-direction: column;
 }
-.dailytasks div {
+
+.tasks_btn {
+  justify-content: flex-end;
+}
+
+.tasks_list {
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
   width: 90%;
 }
-.dailytasks div span {
+.tasks_list span {
   font-size: 1.5rem;
 }
-.dailytasks div button {
+.tasks_list button {
   font-family: "GmarketSansMedium";
   background-color: inherit;
   border: none;
@@ -50,4 +55,8 @@
 .notset_span {
   margin-top: 1.5rem;
   text-align: center;
+}
+
+.task_checked {
+  text-decoration: line-through;
 }
