--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,4 +11,9 @@ body {
   color: black;
   width: 100%;
   height: 100vh;
+  box-sizing: border-box;
+}
+
+button {
+  font-family: "GmarketSansMedium";
 }
