--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,4 +13,9 @@ body {
   color: black;
   width: 100%;
   height: 100vh;
+  box-sizing: border-box;
+}
+
+button {
+  font-family: "GmarketSansMedium";
 }
