--- a/src/styles/main/main.css
+++ b/src/styles/main/main.css
@@ -1,6 +1,6 @@
 @import url("../app.css");
 .main {
-  font-family: "GmarketSansMedium";
+  font-family: "GmarketSansMedium", serif;
   width: 100%;
   height: 92vh;
   display: grid;
@@ -31,18 +31,17 @@
 .left_SideBars::-webkit-scrollbar-track {
   border-radius: 10px;
   background-color: gray;
-  box-shadow: inset 0px 0px 5px white;
+  box-shadow: inset 0 0 5px white;
 }
 .left_SideBars .character {
   margin-top: 8px;
-  font-family: "GmarketSansMedium";
+  font-family: "GmarketSansMedium", serif;
   justify-self: center;
   display: flex;
   align-items: center;
   border: 1px solid black;
   border-radius: 15px;
   width: 90%;
-  background-color: white;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
   position: relative;
 }
@@ -57,7 +56,7 @@
 }
 
 .job_delete_btn {
-  background-color: white;
+  background-color: inherit;
   border: none;
   position: absolute;
   right: 0;
@@ -69,8 +68,7 @@
   height: 100vh;
   top: 0;
   z-index: 2;
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -98,7 +96,7 @@
   border-radius: 10px;
   width: 8rem;
   height: 4rem;
-  padding: none;
+  padding: 0;
   background-color: inherit;
   border: 1px solid black;
 }
@@ -131,3 +129,35 @@
   display: flex;
   justify-content: center;
 }
+
+.dark_mode {
+  background-color: #2c3e50;
+  color: #ecf0f1;
+}
+
+.dark_mode_job {
+  background-color: #7696c0;
+  color: #ecf0f1;
+}
+.dark_mode_job a {
+  color: #ecf0f1;
+}
+
+.light_mode_job {
+  background-color: white;
+}
+
+.dark_mode_btn {
+  background-color: #bdc3c7;
+  color: black;
+}
+
+.dark_mode_area {
+  background-color: #487eb0;
+}
+
+.light_mode_area {
+  background-color: #74b9ff;
+}
+
+/*# sourceMappingURL=main.css.map */
