--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -2,7 +2,7 @@
 $box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
 
 .main {
-  font-family: "GmarketSansMedium";
+  font-family: "GmarketSansMedium", serif;
   width: 100%;
   height: 92vh;
   display: grid;
@@ -32,19 +32,17 @@ $box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
   &::-webkit-scrollbar-track {
     border-radius: 10px;
     background-color: gray;
-    box-shadow: inset 0px 0px 5px white;
+    box-shadow: inset 0 0 5px white;
   }
   .character {
     margin-top: 8px;
-    font-family: "GmarketSansMedium";
+    font-family: "GmarketSansMedium", serif;
     justify-self: center;
     display: flex;
     align-items: center;
     border: 1px solid black;
     border-radius: 15px;
     width: 90%;
-    background-color: white;
-
     box-shadow: $box-shadow;
     position: relative;
   }
@@ -58,7 +56,7 @@ $box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
   color: black;
 }
 .job_delete_btn {
-  background-color: white;
+  background-color: inherit;
   border: none;
   position: absolute;
   right: 0;
@@ -95,7 +93,7 @@ $box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
       border-radius: 10px;
       width: 8rem;
       height: 4rem;
-      padding: none;
+      padding: 0;
       background-color: inherit;
       border: 1px solid black;
     }
@@ -126,4 +124,29 @@ $box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
       justify-content: center;
     }
   }
+}
+
+.dark_mode {
+  background-color: #2c3e50;
+  color: #ecf0f1;
+}
+.dark_mode_job {
+  background-color: #7696c0;
+  color: #ecf0f1;
+  a {
+    color: #ecf0f1;
+  }
+}
+.light_mode_job {
+  background-color: white;
+}
+.dark_mode_btn {
+  background-color: #bdc3c7;
+  color: black;
+}
+.dark_mode_area {
+  background-color: #487eb0;
+}
+.light_mode_area {
+  background-color: #74b9ff;
 }
