--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -1,12 +1,12 @@
 header {
-  font-family: "Roboto";
+  font-family: "Roboto", serif;
   width: 100%;
   padding: 20px;
   font-size: 2.3rem;
   box-sizing: border-box;
   border-bottom: 1px solid black;
-  -webkit-backdrop-filter: blur(30px);
-          backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  display: flex;
   height: 8vh;
 }
 header a {
@@ -15,10 +15,16 @@ header a {
   color: black;
   margin-left: 5rem;
 }
+header button {
+  margin-left: 65%;
+  background-color: inherit;
+  border: none;
+  font-size: 2rem;
+}
 
 .headerLogo {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
   display: flex;
 }
+
+/*# sourceMappingURL=header.css.map */
