--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,17 +1,24 @@
 header {
-  font-family: "Roboto";
+  font-family: "Roboto", serif;
   width: 100%;
   padding: 20px;
   font-size: 2.3rem;
   box-sizing: border-box;
   border-bottom: 1px solid black;
   backdrop-filter: blur(30px);
+  display: flex;
   height: 8vh;
   a {
     display: flex;
     text-decoration: none;
     color: black;
     margin-left: 5rem;
+  }
+  button {
+    margin-left: 65%;
+    background-color: inherit;
+    border: none;
+    font-size: 2rem;
   }
 }
 .headerLogo {
