--- a/src/styles/main/main.css
+++ b/src/styles/main/main.css
@@ -134,6 +134,9 @@
   background-color: #2c3e50;
   color: #ecf0f1;
 }
+.dark_mode a {
+  color: #ecf0f1;
+}
 
 .dark_mode_job {
   background-color: #7696c0;
