--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -129,6 +129,9 @@ $box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.06);
 .dark_mode {
   background-color: #2c3e50;
   color: #ecf0f1;
+  a {
+    color: #ecf0f1;
+  }
 }
 .dark_mode_job {
   background-color: #7696c0;
