--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -5,6 +5,7 @@ header {
   font-size: 2.3rem;
   box-sizing: border-box;
   border-bottom: 1px solid black;
+  justify-content: space-between;
   backdrop-filter: blur(30px);
   display: flex;
   height: 8vh;
